style/index file updated

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <header class="wrapper bg-dark">
         <nav class="navbar center-nav transparent navbar-expand-lg navbar-dark">
           <div class="container flex-lg-row flex-nowrap align-items-center">
-            <div class="navbar-brand w-100"><a href="start.html"><img src="img/logo-dark.png" srcset="img/logo-dark@2x.png 2x" class="logo-dark" alt="" /><img src="img/logo-light.png" srcset="img/logo-light@2x.png 2x" class="logo-light" alt="" /></a></div>
+            <div class="navbar-brand w-100"><a href="index.html"><img src="img/logo-dark.png" srcset="img/logo-dark.png" class="logo-dark" alt="Logo" /><img src="img/logo-light.png" srcset="img/logo-light.png" class="logo-light" alt="Logo" /></a></div>
             <div class="navbar-collapse offcanvas-nav">
               <div class="offcanvas-header d-lg-none d-xl-none">
-                <a href="start.html"><img src="img/logo-light.png" srcset="img/logo-light@2x.png 2x" alt="" /></a>
+                <a href="index.html"><img src="img/logo-light.png" srcset="img/logo-light.png" alt="Logo" /></a>
                 <button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
               </div>
-              <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#!">What We Are</a>
-                <li class="nav-item"><a class="nav-link" href="#!">What We Do</a>
-                <li class="nav-item"><a class="nav-link" href="#!">Our Clients</a>
+              <ul class="navbar-nav me-7">
+                <li class="nav-item"><a class="nav-link" href="#our-client">Our Clients</a>
+                <li class="nav-item"><a class="nav-link" href="#who-we-are">Who We Are</a>
+                <li class="nav-item"><a class="nav-link" href="#what-we-do">What We Do</a>
                 </li>
               </ul>
               <!-- /.navbar-nav -->
@@ -34,7 +34,7 @@
             <div class="navbar-other d-flex ms-auto">
               <ul class="navbar-nav flex-row align-items-center ms-auto" data-sm-skip="true">
                 <li class="nav-item d-none d-md-block">
-                  <a href="#" class="btn btn-sm btn-primary rounded">Contact Us</a>
+                  <a href="#" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-03">Contact Us</a>
                 </li>
                 <li class="nav-item d-lg-none">
                   <div class="navbar-hamburger"><button class="hamburger animate plain" data-toggle="offcanvas-nav"><span></span></button></div>
@@ -51,8 +51,8 @@
             <div class="container pt-7 pt-md-11 pb-8">
               <div class="row gx-0 gy-10 align-items-center">
                 <div class="col-lg-6" data-cues="slideInDown" data-group="page-title" data-delay="600">
-                  <h1 class="display-1 text-white mb-4 text-white">We trade in <br /><span class="typer text-primary text-nowrap" data-delay="100" data-delim=":" data-words="Refined Metals:Ferro Alloys:Noble Alloys:Metal Scrap"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
-                  <p class="lead fs-24 lh-sm text-white mb-7 pe-md-18 pe-lg-0 pe-xxl-15">We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally</p>
+                  <h1 class="display-1 text-white mb-4 text-white">We trade in <br /><span class="typer text-primary text-nowrap" data-delay="100" data-delim=":" data-words="Refined Metals:Ferro Alloys:Noble Alloys:Metal Scrap:Precious Metals"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
+                  <p class="lead fs-24 lh-sm text-white mb-7 pe-md-18 pe-lg-0 pe-xxl-15">We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally.</p>
                 </div>
                 <!-- /column -->
                 <div class="col-lg-5 offset-lg-1 mb-n18" data-cues="slideInDown">
@@ -69,9 +69,9 @@
         </section>
 
     </header>
-    <section class="wrapper bg-light">
+    <section id="our-client" class="wrapper bg-light">
       <div class="container py-14 pt-18 pb-12">
-        <h2 class="fs-15 text-uppercase text-muted text-center mb-8">We work with the best in the industry</h2>
+        <h2 class="fs-15 text-uppercase text-muted text-center mb-8">TRUSTED BY THE BEST IN THE INDUSTRY</h2>
         <div class="px-lg-5">
           <div class="row gx-0 gx-md-8 gx-xl-12 gy-8 align-items-center">
             <div class="col-4 col-md-2">
@@ -109,8 +109,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-xl-7 col-xxl-6">
-            <h2 class="fs-16 text-uppercase text-line text-primary mb-3">What We Do?</h2>
-            <h3 class="display-4 mb-9">The service we offer is specifically designed to meet your needs.</h3>
+            <h2 id="who-we-are" class="fs-16 text-uppercase text-line text-primary mb-3">Who We Are</h2>
+            <h3 class="display-4 mb-9">A bunch of musketeers who got together in these testing times to create India's first global trading organization.</h3>
           </div>
           <!-- /column -->
         </div>
@@ -119,19 +119,19 @@
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-phone-volume"></i> </div>
             <h4>Best Rate</h4>
-            <p class="mb-3">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo.</p>
+            <p class="mb-3">We are well connected in the trading ecosystem globally and always focus on providing the best pricing in the industry.</p>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-shield-exclamation"></i> </div>
             <h4>Experienced Team</h4>
-            <p class="mb-3">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo.</p>
+            <p class="mb-3">With more than a century of experience behind us, we strive to provide the best industry expertize to our clients.</p>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-laptop-cloud"></i> </div>
             <h4>No Counter-Party Risk</h4>
-            <p class="mb-3">All of our trades are either under the cash & carry model or are backed by secure credit instruments like Usance L/C etc</p>
+            <p class="mb-3">All of our trades are either under the cash & carry model or are backed by secure credit instruments like Usance L/C etc.</p>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
@@ -177,7 +177,7 @@
                 <div class="card bg-pale-leaf">
                   <div class="card-body">
                     <img src="img/icons/cloud-computing-3.svg" class="svg-inject icon-svg icon-svg-md text-leaf mb-3" alt="" />
-                    <h4>Ferro &</br> Noble Alloy</h4>
+                    <h4>Ferro &</br> Noble Alloys</h4>
                   </div>
                   <!--/.card-body -->
                 </div>
@@ -200,8 +200,8 @@
           </div>
           <!--/column -->
           <div class="col-lg-5">
-            <h2 class="fs-15 text-uppercase text-muted mb-3">What We Do?</h2>
-            <h3 class="display-4 mb-5">The service we offer is specifically designed to meet your needs.</h3>
+            <h2 id="what-we-do" class="fs-16 text-uppercase text-line text-primary mb-3">What We Do?</h2>
+            <h3 class="display-4 mb-5">Connecting our clients to the global commodity economy.</h3>
             <p>With in-depth knowledge of the market and the products across commodities, we are playing on our strength to trade in the following products & services:</p>
           </div>
           <!--/column -->
@@ -217,8 +217,8 @@
           <div class="col-xl-11 col-xxl-10 mx-auto">
             <div class="card image-wrapper bg-full bg-image bg-overlay bg-overlay-400 mt-n50p mb-n5" data-image-src="img/photos/bg3.jpg">
               <div class="card-body p-6 p-md-11 d-lg-flex flex-row align-items-lg-center justify-content-md-between text-center text-lg-start">
-                <h3 class="display-6 mb-6 mb-lg-0 pe-lg-15 pe-xxl-18 text-white">We are trusted by the most prominent players in the metals industry globally. Join them by reaching out to us.</h3>
-                <a href="#" class="btn btn-white rounded-pill mb-0 text-nowrap">Contact Us</a>
+                <h3 class="display-6 mb-6 mb-lg-0 pe-lg-15 pe-xxl-18 text-white">We are trusted by the most prominent players in the metal industry globally. Join them by reaching out to us.</h3>
+                <a href="#" class="btn btn-white rounded-pill mb-0 text-nowrap" data-bs-toggle="modal" data-bs-target="#modal-03">Contact Us</a>
               </div>
               <!--/.card-body -->
             </div>
@@ -234,24 +234,24 @@
             <div class="row mb-3">
               <div class="col-md-4">
                 <div class="widget">
-                  <h4 class="widget-title">Address</h4>
-                  <address>Moonshine St. 14/05 <br class="d-none d-md-block" /> Light City, London, UK</address>
+                  <h4 class="widget-title text-primary">Address</h4>
+                  <address>2/117, WeWork Oberoi Commerz II,<br class="d-none d-md-block" />  Goregaon East, Mumbai, INDIA</address>
                 </div>
                 <!-- /.widget -->
               </div>
               <!--/column -->
               <div class="col-md-4">
                 <div class="widget">
-                  <h4 class="widget-title">Phone</h4>
-                  <p>00 (123) 456 78 90 <br class="d-none d-md-block" />00 (987) 654 32 10</p>
+                  <h4 class="widget-title text-primary">Phone</h4>
+                  <p>+91 900 4825 077 <br class="d-none d-md-block" />+91 22 5036 5079</p>
                 </div>
                 <!-- /.widget -->
               </div>
               <!--/column -->
               <div class="col-md-4">
                 <div class="widget">
-                  <h4 class="widget-title">E-mail</h4>
-                  <p><a href="mailto:sandbox@email.com" class="link-body">sandbox@email.com</a> <br class="d-none d-md-block" /><a href="mailto:help@sandbox.com" class="link-body">help@sandbox.com</a></p>
+                  <h4 class="widget-title text-primary">E-mail</h4>
+                  <p><a href="mailto:info@asier.in" class="link-body">info@asier.in</a> <br class="d-none d-md-block" /><a href="mailto:finance@asier.in" class="link-body">finance@asier.in</a></p>
                 </div>
                 <!-- /.widget -->
               </div>
@@ -274,6 +274,58 @@
       </div>
       <!-- /.container -->
     </footer>
+
+    <div class="modal fade" id="modal-03" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content text-center">
+          <div class="modal-body">
+            <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <form class="contact-form" method="post" action="php/contact.php" novalidate="true">
+              <div class="messages"></div>
+              <div class="controls">
+                <div class="row gx-4">
+                  <div class="col-md-6">
+                    <div class="form-label-group mb-4">
+                      <input id="form_name" type="text" name="name" class="form-control" placeholder="Jane" required="required" data-error="First Name is required.">
+                      <label for="form_name">First Name *</label>
+                      <div class="help-block with-errors"></div>
+                    </div>
+                  </div>
+                  <!-- /column -->
+                  <div class="col-md-6">
+                    <div class="form-label-group mb-4">
+                      <input id="form_email" type="email" name="email" class="form-control" placeholder="jane.doe@example.com" required="required" data-error="Valid email is required.">
+                      <label for="form_email">Email *</label>
+                      <div class="help-block with-errors"></div>
+                    </div>
+                  </div>
+                  <!-- /column -->
+
+                  <div class="col-12">
+                    <div class="form-label-group mb-4">
+                      <textarea id="form_message" name="message" class="form-control" placeholder="Your message" rows="8" required="required" data-error="Message is required."></textarea>
+                      <label for="form_message">Message *</label>
+                      <div class="help-block with-errors"></div>
+                    </div>
+                  </div>
+                  <!-- /column -->
+                  <div class="col-12 text-start">
+                    <input type="submit" class="btn btn-outline-primary rounded-pill mb-3" value="Send message">
+                  </div>
+                  <!-- /column -->
+                </div>
+                <!-- /.row -->
+              </div>
+              <!-- /.controls -->
+            </form>
+          </div>
+          <!--/.modal-content -->
+        </div>
+        <!--/.modal-body -->
+      </div>
+      <!--/.modal-dialog -->
+    </div>
+    <!--/.modal -->
 
   <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
