--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Aiser</title>
   <link rel="stylesheet" href="css/plugins.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/colors/yellow.css">
   <link rel="preload" href="css/fonts/thicccboi.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
@@ -148,25 +147,25 @@
         <!-- /.row -->
         <div class="row gx-md-8 gy-8">
           <div class="col-md-6 col-lg-3">
-            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-phone-volume"></i> </div>
+            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <img src="img/icons/award-2.svg" class="svg-inject icon-svg text-primary" alt="icon" /> </div>
             <h4>Best Solutions</h4>
             <p class="mb-3">We are well connected in the trading ecosystem globally and always focus on providing the best solutions to our partners.</p>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
-            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-shield-exclamation"></i> </div>
+            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <img src="img/icons/user.svg" class="svg-inject icon-svg text-primary" alt="icon" /> </div>
             <h4>Experienced Team</h4>
             <p class="mb-3">With more than a century of experience behind us, we strive to provide the best industry practices to our partners.</p>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
-            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-laptop-cloud"></i> </div>
+            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <img src="img/icons/check.svg" class="svg-inject icon-svg text-primary" alt="icon" /> </div>
             <h4>No Counter-Party Risk</h4>
             <p class="mb-3">All of our trades are either under the Cash & Carry model or are backed by secure credit instruments.</p>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
-            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <i class="uil uil-chart-line"></i> </div>
+            <div class="icon btn btn-block btn-lg btn-soft-primary disabled mb-6"> <img src="img/icons/target.svg" class="svg-inject icon-svg text-primary" alt="icon" /> </div>
             <h4>100% Hedged</h4>
             <p class="mb-3">All of our cargos are 100% hedged. We don't expose our clients to price risk & market volatility.</p>
           </div>
@@ -177,15 +176,15 @@
       <!-- /.container -->
     </section>
 
-    <section class="wrapper bg-light wrapper-border" id="what-we-do">
+    <section class="wrapper bg-light wrapper-border">
       <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
+        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center" id="what-we-do">
           <div class="col-lg-7 order-lg-2">
             <div class="row gx-md-5 gy-5">
               <div class="col-md-5 offset-md-1 align-self-end">
                 <div class="card bg-pale-yellow">
                   <div class="card-body">
-                    <img src="img/icons/telephone-3.svg" class="svg-inject icon-svg icon-svg-md text-yellow mb-3" alt="" />
+                    <img src="img/icons/briefcase-2.svg" class="svg-inject icon-svg text-primary" alt="icon" />
                     <h4>Refine Metals</h4>
                   </div>
                   <!--/.card-body -->
@@ -196,7 +195,7 @@
               <div class="col-md-6 align-self-end">
                 <div class="card bg-pale-red">
                   <div class="card-body">
-                    <img src="img/icons/shield.svg" class="svg-inject icon-svg icon-svg-md text-red mb-3" alt="" />
+                    <img src="img/icons/link.svg" class="svg-inject icon-svg text-primary" alt="icon" />
                     <h4>Metal Scrap</h4>
                     </div>
                   <!--/.card-body -->
@@ -207,7 +206,7 @@
               <div class="col-md-5">
                 <div class="card bg-pale-leaf">
                   <div class="card-body">
-                    <img src="img/icons/cloud-computing-3.svg" class="svg-inject icon-svg icon-svg-md text-leaf mb-3" alt="" />
+                    <img src="img/icons/earth.svg" class="svg-inject icon-svg icon-svg-md text-leaf mb-3" alt="icon" />
                     <h4>Ferro &</br> Noble Alloys</h4>
                   </div>
                   <!--/.card-body -->
@@ -218,7 +217,7 @@
               <div class="col-md-6 align-self-start">
                 <div class="card bg-pale-primary">
                   <div class="card-body">
-                    <img src="img/icons/analytics.svg" class="svg-inject icon-svg icon-svg-md text-primary mb-3" alt="" />
+                    <img src="img/icons/analytics.svg" class="svg-inject icon-svg text-primary" alt="icon" />
                     <h4>Market </br> Hedging Services</h4>
                   </div>
                   <!--/.card-body -->
